<resources>
    <string name="app_name">Wapp</string>
    <string name="temperature">‎°C</string>
    <string name="forecast">Forecast for next Hour</string>
    <string name="iconPhrase">Weather today:</string>
    <string name="dateAndTime">Updated for:</string>
    <string name="precipitationProbability">Chance of rain:</string>
    <string name="percentage">%</string>
    <string name="change_city">Change city:</string>
    <string name="place_pick">Place pick</string>
    <string name="icon">Icon</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="_20">11.7</string>
    <string name="mostly_cloudy_w_showers">Mostly cloudy /w showers</string>
    <string name="_100">100</string>
    <string name="_03_10_2019_10_32">03.10.2019. 11:00</string>
    <string name="weatherwidget">WeatherWidget</string>
</resources>
