<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:text="@string/weatherwidget"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tvIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:src="@drawable/mostly_cloudy_w_showers"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/tvDTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/_20"
            android:textColor="@color/colorWhite"
            android:textSize="55sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/temperature"
            android:textColor="@color/colorWhite"
            android:textSize="55sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iconPhrase"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvIconPhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mostly_cloudy_w_showers"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precipitationProbability"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvPrecipitationProbability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/_100"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateAndTime"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/_03_10_2019_10_32"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>