<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tvIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/tvDTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:gravity="end"
            android:textColor="@color/colorWhite"
            android:textSize="55sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/temperature"
            android:textColor="@color/colorWhite"
            android:textSize="55sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iconPhrase"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvIconPhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precipitationProbability"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvPrecipitationProbability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateAndTime"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>